--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ARP Block</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_scan">ScanActivity</string>
 </resources>
